test/Fail/Issue4881c.agda
mutual
  _ : Set
  _ : Set → Set
